# Neko-Kernel-Manager

./: .dockerignore  .gitignore  Dockerfile.build  Dockerfile.local  PKGBUILD  README.md  build.sh  build_void.sh  make_xbps.sh  meson.build  meson_options.txt  moc_predefs.h  neko-kernel-manager.desktop  package_on_arch.sh  patch_template.sh  reformat_qml.py  resources.qrc  updates.txt  x86_64-repodata
config-option-lib/: Cargo.toml
config-option-lib/src/: lib.rs
metadata/: props.plist
neko-kernel-manager/: template
src/: Main.qml  conf-window.cpp  conf-window.hpp  config-options.hpp  kernel-bridge.cpp  kernel-bridge.hpp  kernel.cpp  kernel.hpp  km-window.cpp  km-window.hpp  main.cpp  theme-manager.cpp  theme-manager.hpp  utils.cpp  utils.hpp
subprojects/: corrosion.wrap
translations/: app_de.ts  app_es.ts  app_fr.ts
void-linux/neko-kernel-manager/: template
